# labs-bazel

./: .editorconfig  .pnp.cjs  BUILD.bazel  README.md  WORKSPACE.bazel  makefile  package.json
app1/: BUILD.bazel  index.js  package.json
src/node/console-basic/: BUILD.bazel  README.md
