# workspace(name = "labs")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
  name = "build_bazel_rules_nodejs",
  sha256 = "f10a3a12894fc3c9bf578ee5a5691769f6805c4be84359681a785a0c12e8d2b6",
  urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/5.5.3/rules_nodejs-5.5.3.tar.gz"],
)

load("@build_bazel_rules_nodejs//:repositories.bzl", "build_bazel_rules_nodejs_dependencies")
build_bazel_rules_nodejs_dependencies()

# fetches nodejs, npm, and yarn
load("@build_bazel_rules_nodejs//:index.bzl", "node_repositories")
node_repositories(
  node_version = "16.16.0",
  yarn_version = "3.2.2",
)

load("@build_bazel_rules_nodejs//:index.bzl", "yarn_install")
yarn_install(
  name = "main_npm",
  package_json = "//:package.json",
  yarn_lock = "//:yarn.lock",
)

load("@build_bazel_rules_nodejs//:index.bzl", "yarn_install")
yarn_install(
  name = "app1_npm",
  package_json = "//app1:package.json",
  yarn_lock = "//app1:yarn.lock",
)
